5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4349/executions/1649_2703.log
== TEST (2019-04-09 18:26:54) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num =>18 ):
	mensagem = "eleitor"
else:
	mensagem= "naoeleitor"
	print(eleitor)
	
	
-- ERROR:
File "XXXX", line 2
    if(num =>18 ):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:27:08) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem = "eleitor"
else:
	mensagem= "naoeleitor"
	
	
	
-- ERROR:
File "XXXX", line 2
    if(num =>18 ):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:27:13) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem = "eleitor"
else:
	mensagem= "naoeleitor"
	
	
	
-- EXECUTION TIME:
0.139873
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:

-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:

-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:28:08) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem = "eleitor"
	print(mensagem)
else:
	mensagem= "naoeleitor"
	print(mensagem)
	
	
	
-- OUTPUT:
naoeleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:28:11) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem = "eleitor"
	print(mensagem)
else:
	mensagem= "naoeleitor"
	print(mensagem)
	
	
	
-- EXECUTION TIME:
0.157561
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
naoeleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:28:11) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem = "eleitor"
	print(mensagem)
else:
	mensagem= "naoeleitor"
	print(mensagem)
	
	
	
-- OUTPUT:
naoeleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:28:17) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem = "eleitor"
	print(mensagem)
else:
	mensagem= "naoeleitor"
	print(mensagem)
	
	
	
-- EXECUTION TIME:
0.237855
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
naoeleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:28:20) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem = "eleitor"
	print(mensagem)
else:
	mensagem= "naoeleitor"
	print(mensagem)
	
	
	
-- OUTPUT:
naoeleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:28:34) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem = "eleitor"
	print(mensagem)
else:
	mensagem= "naoeleitor"
	print(mensagem)
	
	
	
-- EXECUTION TIME:
0.139139
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
naoeleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:33:49) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem = "eleitor"
	print(mensagem)
else:
	mensagem= "nao_eleitor"
	print(mensagem)
	
	
	
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:34:00) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem ="eleitor"
	print(mensagem)
else:
	mensagem="nao_eleitor"
	print(mensagem)
	
	
	
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:34:06) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem ="eleitor"
	print(mensagem)
else:
	mensagem="nao_eleitor"
	print(mensagem)
	
	
	
-- EXECUTION TIME:
0.248738
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:34:44) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem = "eleitor"
	print(mensagem)
else:
	mensagem="nao_eleitor"
	print(mensagem)
	
	
	
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:34:50) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem = "eleitor"
	print(mensagem)
else:
	mensagem="nao_eleitor"
	print(mensagem)
	
	
	
-- EXECUTION TIME:
0.123461
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:34:58) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem = "eleitor"
	print(mensagem)
else:
	mensagem= "nao_eleitor"
	print(mensagem)
	
	
	
-- EXECUTION TIME:
0.122217
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:34:59) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem = "eleitor"
	print(mensagem)
else:
	mensagem= "nao_eleitor"
	print(mensagem)
	
	
	
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:35:03) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem = "eleitor"
	print(mensagem)
else:
	mensagem= "nao_eleitor"
	print(mensagem)
	
	
	
-- EXECUTION TIME:
0.181079
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:35:08) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem = "eleitor"
	print(mensagem)
else:
	mensagem= "naoeleitor"
	print(mensagem)
	
	
	
-- OUTPUT:
naoeleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:35:12) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem = "eleitor"
	print(mensagem)
else:
	mensagem= "naoeleitor"
	print(mensagem)
	
	
	
-- EXECUTION TIME:
0.151924
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
naoeleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:35:17) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem = "eleitor"
	print(mensagem)
else:
	mensagem="naoeleitor"
	print(mensagem)
	
	
	
-- OUTPUT:
naoeleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:35:22) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem = "eleitor"
	print(mensagem)
else:
	mensagem="naoeleitor"
	print(mensagem)
	
	
	
-- EXECUTION TIME:
0.12664
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
naoeleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:35:31) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem ="eleitor"
	print(mensagem)
else:
	mensagem="naoeleitor"
	print(mensagem)
	
	
	
-- OUTPUT:
naoeleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:35:35) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem ="eleitor"
	print(mensagem)
else:
	mensagem="naoeleitor"
	print(mensagem)
	
	
	
-- EXECUTION TIME:
0.263193
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
naoeleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:35:44) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem="eleitor"
	print(mensagem)
else:
	mensagem="naoeleitor"
	print(mensagem)
	
	
	
-- OUTPUT:
naoeleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:35:47) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem="eleitor"
	print(mensagem)
else:
	mensagem="naoeleitor"
	print(mensagem)
	
	
	
-- EXECUTION TIME:
0.211578
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
naoeleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:35:55) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem="eleitor"
	print(mensagem)
else:
	mensagem="nao_eleitor"
	print(mensagem)
	
	
	
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:35:58) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem="eleitor"
	print(mensagem)
else:
	mensagem="nao_eleitor"
	print(mensagem)
	
	
	
-- EXECUTION TIME:
0.142129
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:36:15) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem="eleitor"
	print(mensagem)
else:
	mensagem="naoeleitor"
	print(mensagem)
	
	
	
-- OUTPUT:
naoeleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:36:19) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem="eleitor"
	print(mensagem)
else:
	mensagem="naoeleitor"
	print(mensagem)
	
	
	
-- EXECUTION TIME:
0.120843
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
naoeleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:36:39) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem="eleitor"
	print(mensagem)
else:
	mensagem="nao_eleitor"
	print(mensagem)
	
	
	
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:36:44) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem="eleitor"
	print(mensagem)
else:
	mensagem="nao_eleitor"
	print(mensagem)
	
	
	
-- EXECUTION TIME:
0.177088
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:42:33) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem="eleitor"
	print(mensagem)
else:
	mensagem="naoeleitor"
	print(mensagem)
	
	
	
-- OUTPUT:
naoeleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:42:37) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem="eleitor"
	print(mensagem)
else:
	mensagem="naoeleitor"
	print(mensagem)
	
	
	
-- EXECUTION TIME:
0.177963
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
naoeleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:42:44) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem="eleitor"
	print(mensagem)
else:
	mensagem="nao_eleitor"
	print(mensagem)
	
	
	
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:42:48) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem="eleitor"
	print(mensagem)
else:
	mensagem="nao_eleitor"
	print(mensagem)
	
	
	
-- EXECUTION TIME:
0.180789
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:43:32) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem="eleitor"
	print(mensagem)
else:
	mensagem="nao eleitor"
	print(mensagem)
	
	
	
-- OUTPUT:
nao eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:43:35) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem="eleitor"
	print(mensagem)
else:
	mensagem="nao eleitor"
	print(mensagem)
	
	
	
-- EXECUTION TIME:
0.137033
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:43:42) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem="eleitor"
	print(mensagem)
else:
	mensagem="nao_eleitor"
	print(mensagem)
	
	
	
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:43:43) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem="eleitor"
	print(mensagem)
else:
	mensagem="nao_eleitor"
	print(mensagem)
	
	
	
-- EXECUTION TIME:
0.158601
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:43:44) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem="eleitor"
	print(mensagem)
else:
	mensagem="nao_eleitor"
	print(mensagem)
	
	
	
-- EXECUTION TIME:
0.194133
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:43:47) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem="eleitor"
	print(mensagem)
else:
	mensagem="nao_eleitor"
	print(mensagem)
	
	
	
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:43:51) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18 ):
	mensagem="eleitor"
	print(mensagem)
else:
	mensagem="nao_eleitor"
	print(mensagem)
	
	
	
-- EXECUTION TIME:
0.167078
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:49:13) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18):
	mensagem="eleitor"
	print(mensagem)
else:
	mensagem="nao_eleitor"
	print(mensagem)
	
	
	
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:49:18) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num >=18):
	mensagem="eleitor"
	print(mensagem)
else:
	mensagem="nao_eleitor"
	print(mensagem)
	
	
	
-- EXECUTION TIME:
0.109549
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:54:31) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num>=18):
	mensagem="eleitor"
	print(mensagem)
else:
	mensagem="nao_eleitor"
	print(mensagem)
	
	
	
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 15:54:32) 
-- CODE:
num= int(input("idade da pessoa: "))
if(num>=18):
	mensagem="eleitor"
	print(mensagem)
else:
	mensagem="nao_eleitor"
	print(mensagem)
	
	
	
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
